# data_oracle

./: .gitignore  README.md  example.sqlite  pyproject.toml
src/data_oracle/: __init__.py
src/data_oracle/connectors/: __init__.py  baseconnector.py  connection_class.py  csvconnector.py  database_schema.py  excelconnector.py  sqlalchemyconnector.py
src/data_oracle/db_schema/: __init__.py  database_schema.py  filter.py  filterobject.py  foreign_key_schema.py  utils.py
src/data_oracle/enums/: __init__.py  sql_enums.py
src/data_oracle/query_generation/pipeline/: basepipeline.py  local_pipeline.py  pipeline.py
tests/: test_db_schema.py  test_sql_schema.py  test_table_schema.py
