[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_oracle"
version = "0.0.1"
authors = [
  { name="Raffael Schön", email="raffaelscho@gmail.com" },
]
description = "A package covering all utilities required for text to sql"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary==2.9.8",
    "pytz==2023.3.post1",
    "sqlparse==0.4.4",
    "typing_extensions==4.8.0",
    "SQLAlchemy==2.0.21",
    "overrides == 7.4.0",
    "pymysql == 1.1.0",
    "oracledb == 1.4.1",
    "pyodbc == 4.0.39",
    "transformers == 4.35.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raeudigerRaeffi/data_oracle"
"Bug Tracker" = "https://github.com/raeudigerRaeffi/data_oracle/issues"



